crypto: caam - fix double words typo
Fix typo and rephrase docstring in Kconfig

Change-Id: I4b6f6d54459307b8a418894b5836e2e50352c3df
Signed-off-by: Cristian Stoica <cristian.stoica@freescale.com>
Reviewed-on: http://git.am.freescale.net:8181/3021
Tested-by: Review Code-CDREVIEW <CDREVIEW@freescale.com>
Reviewed-by: Porosanu Alexandru-B06830 <alexandru.porosanu@freescale.com>
Reviewed-by: Garg Vakul-B16394 <vakul@freescale.com>
Reviewed-by: Geanta Neag Horia Ioan-B05471 <horia.geanta@freescale.com>
Reviewed-by: Fleming Andrew-AFLEMING <AFLEMING@freescale.com>

--- a/drivers/crypto/caam/Kconfig
+++ b/drivers/crypto/caam/Kconfig
@@ -82,13 +82,13 @@ config CRYPTO_DEV_FSL_CAAM_CRYPTO_API_QI
 	  Selecting this will use SEC Queue Interface for sending
 	  & receiving crypto jobs to/from SEC. This gives better
 	  performance than job ring interface when the number of
-	  number of cores are more than the number of job rings
-	  assigned to kernel. Also the number of portals assigned
-	  to kernel should be more than the number of job rings.
+	  cores are more than the number of job rings assigned to
+	  the kernel. The number of portals assigned to the kernel
+	  should also be more than the number of job rings.
 
-	  Currently only AEAD algorithms have been implemented to
-	  use SEC-QI backend interface. Rest of the algorithms
-	  would use job ring interface.
+	  Currently, only AEAD algorithms have been implemented on
+	  top of SEC-QI backend interface. The rest of the algorithms
+	  use job ring interface.
 
 	  To compile this as a module, choose M here: the module
 	  will be called caamalg_qi.
